<resources>
    <string name="app_name">Register_Constraint</string>
    <string name="female">Female</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="address">Address</string>
    <string name="birthday">Birthday</string>
    <string name="register">Register</string>
    <string name="i_agree_to_terms_of_user">I agree to Terms of User</string>
    <string name="email">Email</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="birthday1">Birthday</string>
    <string name="address1">Address</string>
    <string name="email1">Email</string>
    <string name="last_name1">Last Name</string>
    <string name="first_name1">First Name</string>
</resources>